deploy/k8s/k8s-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: va-lse
  labels:
    app.kubernetes.io/name: va-lse
    app.kubernetes.io/part-of: va-lay-statement-evaluator
